--- a/weather-app/src/app/app.component.html
+++ b/weather-app/src/app/app.component.html
@@ -1,4 +1,69 @@
-<div class="container">
+<div class="search">
+  <form #form="ngForm" (submit)="onSubmit">
+    <input type="text" placeholder="Search city" name="city" [(ngModel)]="cityName">
+  </form>
+</div>
+
+<div class="container" *ngIf="weatherData">
+  <div class="upper-data">
+    <img src="../assets/hot.jpg" *ngIf="weatherData.main.temp > 15">
+    <img src="../assets/cold.jpg" *ngIf="weatherData.main.temp <= 15" >
+    <div class="weather-data">
+      <div class="location">{{weatherData.name}}</div>
+      <div class="temperature">{{ weatherData.main.temp | number: '1,0-0'}}°C</div>
+    </div>
+  </div>
+
+  <div class="lower-data">
+    <div class="more-info-label">
+      More information
+    </div>
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/min.png">
+          <span>min</span>
+        </div>
+        <div class="info-block-value">
+          {{weatherData.main.temp_min}}
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/max.jpeg">
+          <span>max</span>
+        </div>
+        <div class="info-block-value">
+        {{weatherData.main.temp_max}}
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/humidity.png">
+          <span>humidity</span>
+        </div>
+        <div class="info-block-value">
+          {{weatherData.main.humidity}}%
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/wind.png">
+          <span>wind</span>
+        </div>
+        <div class="info-block-value">
+          {{weatherData.wind.speed}}
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<!-- <div class="container">
   <div class="upper-data">
     <img src="../assets/hot.jpg" *ngIf="14 > 15">
     <img src="../assets/cold.jpg" *ngIf="14 <= 15" >
@@ -55,6 +120,7 @@
     </div>
   </div>
 
-</div>
+</div> -->
+
 
 <router-outlet></router-outlet>
