--- a/weather-app/src/styles.css
+++ b/weather-app/src/styles.css
@@ -134,3 +134,15 @@ body {
     align-items: center;
     color: var(--white);
 }
+
+.search {
+   margin-bottom: 1em;
+   text-align: center;
+   outline: none;
+   border: none;
+   border-radius: 20px;
+   padding: 1em;
+   color: var(--grey-1);
+   font-size: 0.8em;
+   text-align: center;
+}
